# Quack2TeX

./: .gitignore  Makefile  README.md  code  main.py  pyproject.toml
code/: menu.py
scripts/: generate_build.sh  generate_resources_file.py  generate_resources_file.sh
src/quack2tex/: __init__.py  cli.py  pyqt.py
src/quack2tex/decors/: __init__.py  gui_exception.py
src/quack2tex/enums/: __init__.py  capture_mode.py
src/quack2tex/llm/: __init__.py  base.py  google_client.py  llm.py  main.py  ollama_client.py  openai_client.py
src/quack2tex/repository/: __init__.py  menu_item_repository.py  models.py  prompt_repository.py
src/quack2tex/repository/db/: __init__.py  async_session.py  session_manager.py  sync_session.py
src/quack2tex/resources/: __init__.py  resources.qrc  resources_rc.py
src/quack2tex/resources/icons/: backup.txt
src/quack2tex/resources/styles/: style.qss
src/quack2tex/utils/: __init__.py  async_utils.py  gui_utils.py  image_utils.py  lib_utils.py  treeview_standard_model.py  work_exception.py  worker.py  workers_manager.py
src/quack2tex/widgets/: __init__.py  floating_menu.py  image_button.py  loading_indicator.py
src/quack2tex/widgets/audio_recorder/: __init__.py  audio_device_picker.py  audio_recorder.py  audio_recorder_dialog.py  speech_processor.py  whisper_model_picker.py
src/quack2tex/widgets/clickable_line_edit/: __init__.py  clickable_line_edit.py
src/quack2tex/widgets/duck_floating_menu/: __init__.py  duck_floating_menu.py  menu_items.py
src/quack2tex/widgets/duck_menu/: __init__.py  duck_menu.py
src/quack2tex/widgets/duck_treeview/: __init__.py  custom_model.py  custom_node.py  duck_menu_treeview.py
src/quack2tex/widgets/file_uploader/: __init__.py  file_uploader.py
src/quack2tex/widgets/floating_menu/: __init__.py  floating_menu.py  floating_menu_item.py
src/quack2tex/widgets/forms/: __init__.py
src/quack2tex/widgets/forms/menu_item_form/: menu_item_form.py
src/quack2tex/widgets/image_button/: image_button.py
src/quack2tex/widgets/loading_indicator/: __init__.py  loading_indicator.py
src/quack2tex/widgets/mardown_viewer/: __init__.py  index.html  mardown_viewer.py
src/quack2tex/widgets/model_picker/: __init__.py  model_picker.py
src/quack2tex/widgets/prompt_dialog/: __init__.py  prompt_dialog.py
src/quack2tex/widgets/prompt_input/: __init__.py  prompt_input.py
src/quack2tex/widgets/radio_button_group/: __init__.py  radio_button_group.py
src/quack2tex/widgets/toast/: __init__.py  toast.py
src/quack2tex/windows/: __init__.py  main_window.back.py  main_window.py  ouput_dialog.py  predictions_window.py  screen_capture.py  settings_window.py
src/quack2tex/windows/setting_window/: __init__.py  hoverable_treeview.py  menu_item_form.py  menu_manager.py  prompt_browser.py  settings_window.py
