[project]
name = "quack2tex"
version = "1.0.7"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiosqlite>=0.20.0",
    "google-generativeai>=0.8.3",
    "markdown>=3.7",
    "matplotlib>=3.9.2",
    "mss>=9.0.2",
    "ollama>=0.3.3",
    "openai>=1.52.0",
    "pillow>=11.0.0",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.1",
    "scipy>=1.14.1",
    "sqlalchemy>=2.0.36",
    "tenacity>=9.0.0",
    "typer>=0.12.5",
    "pyqt6>=6.8.0",
    "pyqt6-webengine>=6.8.0",
    "modihub",
    "pyqt6-qt6>=6.8.1",
]


[project.scripts]
quack2tex = "quack2tex.cli:run"

[project.optional-dependencies]
dev = [
    "pyside6>=6.8.2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
modihub = { path = "../modihub" , editable = true }


[tool.hatch.build]
exclude = [
    "tests/",
    "docs/",
    "examples/",
    "assets/",
    "keys/",
    ".git/",
    ".github/",
    "scripts/",
    "configs/",
    "README.md",
    ".env",
    "config.json",
    "*/**/.sh",
    "Makefile",
    "cloudbuild.yaml",
    "*/**/Dockerfile",
    "Dockerfile",
    "requirements.txt",
    "docker/",
    "*.sh",
    "*.yml",
    "analysis/",
    "data/",
    "images/",
    "ui/",
    "web.ps1",
    ".vscode/",
    ".idea/",
    ".gitignore",
    ".gitattributes",
    ".gitmodules",
    ".gitkeep",
    ".gitlab-ci.yml",
    ".gitlab/",
    ".gitlab-ci/",
    ".gitlab-ci.yml",
    ".python-version"

]
