[project]
name = "quack2tex"
version = "1.0.8"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiosqlite>=0.20.0",
    "google-generativeai>=0.8.3",
    "markdown>=3.7",
    "matplotlib>=3.9.2",
    "mss>=9.0.2",
    "ollama>=0.3.3",
    "openai>=1.52.0",
    "pillow>=11.0.0",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.1",
    "scipy>=1.14.1",
    "sqlalchemy>=2.0.36",
    "tenacity>=9.0.0",
    "typer>=0.12.5",
    "modihub",
    "sounddevice>=0.5.1",
    "pydub>=0.25.1",
    "google-cloud-texttospeech>=2.26.0",
    "openai-whisper>=20240930",
    "pyqtgraph>=0.13.7",
    "markdown2>=2.5.3",
    "bleach>=6.2.0",
    "pyqt6>=6.9.0",
    "pyqt6-webengine>=6.9.0",
]


[project.scripts]
quack2tex = "quack2tex.cli:run"

[project.optional-dependencies]
dev = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
modihub = { path = "../modihub" , editable = true }


[tool.hatch.build]
exclude = [
    "tests/",
    "docs/",
    "examples/",
    "assets/",
    "keys/",
    ".git/",
    ".github/",
    "scripts/",
    "configs/",
    "README.md",
    ".env",
    "config.json",
    "*/**/.sh",
    "Makefile",
    "cloudbuild.yaml",
    "*/**/Dockerfile",
    "Dockerfile",
    "requirements.txt",
    "docker/",
    "*.sh",
    "*.yml",
    "analysis/",
    "data/",
    "images/",
    "ui/",
    "web.ps1",
    ".vscode/",
    ".idea/",
    ".gitignore",
    ".gitattributes",
    ".gitmodules",
    ".gitkeep",
    ".gitlab-ci.yml",
    ".gitlab/",
    ".gitlab-ci/",
    ".gitlab-ci.yml",
    ".python-version"

]
